# MotorcycleAlarm

./: CMakeLists.txt  README.md  build.sh  flash.sh  nucleo_f446re.overlay  prj.conf  rebuild.sh
bma220/zephyr/: CMakeLists.txt  Kconfig  bma220.c  bma220.h  bma220_trigger.c  module.yml
bma220/zephyr/dts/bindings/: bosch,bma220-i2c.yaml
sim800l/zephyr/: CMakeLists.txt  Kconfig  sim800l.c  sim800l.h
sim800l/zephyr/dts/bindings/: simcom,sim800l.yaml
src/: main.c  motorcycle_alarm.c  motorcycle_alarm.h
